--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsdevenvironmenttemplate",
+  "name": "currency-exchange",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
